--- a/app/src/main/res/drawable-anydpi/ic_logout.xml
+++ b/app/src/main/res/drawable-anydpi/ic_logout.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#4379F2"
-    android:alpha="0.6"
+    android:tint="#1E2486"
+    android:alpha="0.8"
     android:autoMirrored="true">
   <path
       android:fillColor="@android:color/white"
