--- a/app/src/main/res/drawable-anydpi/ic_menu.xml
+++ b/app/src/main/res/drawable-anydpi/ic_menu.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#4379F2"
+    android:tint="#1E2486"
     android:alpha="0.6">
   <path
       android:fillColor="@android:color/white"
