--- a/app/src/main/res/layout/activity_medical.xml
+++ b/app/src/main/res/layout/activity_medical.xml
@@ -156,6 +156,36 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/teacher_spinner_layout"
+                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    android:textColorHint="@color/login_input_color"
+                    app:boxCornerRadiusBottomEnd="2dp"
+                    app:boxCornerRadiusBottomStart="2dp"
+                    app:boxCornerRadiusTopEnd="2dp"
+                    app:boxCornerRadiusTopStart="2dp"
+                    app:boxStrokeColor="@color/input_color_selector"
+                    app:boxStrokeWidth="2dp"
+                    app:hintTextColor="@color/login_input_color"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/reason_input_layout">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/teacher_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/inter"
+                        android:hint="@string/select_teacher"
+                        android:inputType="none"
+                        android:textSize="16sp"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/start_date_input_layout"
                     style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                     android:layout_width="0dp"
@@ -172,7 +202,7 @@
                     app:hintTextColor="@color/login_input_color"
                     app:layout_constraintEnd_toStartOf="@+id/end_date_input_layout"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/reason_input_layout">
+                    app:layout_constraintTop_toBottomOf="@id/teacher_spinner_layout">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/start_date_input"
@@ -202,7 +232,7 @@
                     app:hintTextColor="@color/login_input_color"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/start_date_input_layout"
-                    app:layout_constraintTop_toBottomOf="@id/reason_input_layout">
+                    app:layout_constraintTop_toBottomOf="@id/teacher_spinner_layout">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/end_date_input"
