Commit - Cocurricular and Medical Activities are complete

--- a/app/src/main/res/layout/activity_medical.xml
+++ b/app/src/main/res/layout/activity_medical.xml
@@ -251,30 +251,60 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:layout_marginEnd="120dp"
+                    android:layout_marginEnd="8dp"
                     android:fontFamily="@font/inter_semibold"
                     android:text="Attach Medical Certificate"
                     android:textColor="@color/white"
                     app:backgroundTint="@color/colorPrimary"
                     app:cornerRadius="2dp"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/preview_certificate_button"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/start_date_input_layout" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/preview_certificate_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/inter_semibold"
+                    android:text="Preview"
+                    android:textColor="@color/colorPrimary"
+                    app:backgroundTint="@color/form_bg_color"
+                    app:strokeColor="@color/colorPrimary"
+                    app:strokeWidth="2dp"
+                    app:cornerRadius="2dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/attach_certificate_button"
+                    app:layout_constraintBottom_toBottomOf="@id/attach_certificate_button" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/other_documents_button"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="120dp"
+                    android:layout_marginEnd="8dp"
                     android:fontFamily="@font/inter_semibold"
                     android:text="Other Documents"
                     android:textColor="@color/white"
                     app:backgroundTint="@color/colorPrimary"
                     app:cornerRadius="2dp"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/preview_other_documents_button"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/attach_certificate_button" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/preview_other_documents_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/inter_semibold"
+                    android:text="Preview"
+                    android:textColor="@color/colorPrimary"
+                    app:backgroundTint="@color/form_bg_color"
+                    app:strokeColor="@color/colorPrimary"
+                    app:strokeWidth="2dp"
+                    app:cornerRadius="2dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/other_documents_button"
+                    app:layout_constraintBottom_toBottomOf="@id/other_documents_button" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/submit_button"
