--- a/app/src/main/res/layout/fragment_student_login.xml
+++ b/app/src/main/res/layout/fragment_student_login.xml
@@ -37,6 +37,7 @@
             android:inputType="text"
             android:maxLines="1"
             android:padding="12dp"
+            android:textColor="@color/black"
             android:textColorHint="@color/login_input_color" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,7 +72,8 @@
             android:fontFamily="@font/inter"
             android:inputType="textPassword"
             android:maxLines="1"
-            android:padding="12dp" />
+            android:padding="12dp"
+            android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
