--- a/app/src/main/res/layout/fragment_teacher_login.xml
+++ b/app/src/main/res/layout/fragment_teacher_login.xml
@@ -36,6 +36,7 @@
             android:inputType="text"
             android:maxLines="1"
             android:padding="12dp"
+            android:textColor="@color/black"
             android:textColorHint="#4A4A4A" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -70,6 +71,7 @@
             android:inputType="textPassword"
             android:maxLines="1"
             android:padding="12dp"
+            android:textColor="@color/black"
             android:textColorHint="#4A4A4A" />
     </com.google.android.material.textfield.TextInputLayout>
 
