--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,7 +18,6 @@
             android:layout_height="wrap_content"
             android:padding="16dp">
 
-            <!-- Welcome Text -->
             <TextView
                 android:id="@+id/welcomeText"
                 android:layout_width="wrap_content"
@@ -36,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_bold"
-                android:text="Aman Hashim"
+                android:text="Arun Shajan"
                 android:textColor="@android:color/holo_blue_bright"
                 android:textSize="26sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/inter_medium"
-                android:text="2341603"
+                android:text="2341609"
                 android:textAlignment="center"
                 android:textColor="@color/profile_text_color"
                 android:textSize="18sp"
