--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#141414</color>
     <color name="white">#FFFFFFFF</color>
@@ -18,4 +17,14 @@
     <color name="GlowColor">#0408F6</color>
     <color name="green">#42CD7C</color>
     <color name="red">#EC1111</color>
+    <color name="colorTabSelected">#2196F3</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorDivider">#BDBDBD</color>
+    <color name="colorCoCurricular">#4CAF50</color>
+    <color name="colorMedical">#2196F3</color>
+    <color name="colorVisa">#FFC107</color>
+    <color name="colorApproved">#4CAF50</color>
+    <color name="colorDenied">#F44336</color>
+    <color name="colorPending">#2196F3</color>
+
 </resources>
