--- a/app/src/main/res/layout/activity_teacher_profile.xml
+++ b/app/src/main/res/layout/activity_teacher_profile.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="Teacher Name"
+        android:text="Asad Ahmed"
         android:textColor="@color/colorPrimary"
         android:textSize="28sp"
         android:textStyle="bold"
@@ -34,6 +34,7 @@
 
     <ImageView
         android:id="@+id/teacherImage"
+        android:src="@drawable/asad1"
         android:layout_width="104dp"
         android:layout_height="104dp"
         android:layout_marginStart="156dp"
@@ -97,56 +98,6 @@
             app:backgroundTint="@color/green"
             app:elevation="10dp"
             app:strokeColor="@color/green" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/approvedClaimsButton"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="4dp"
-            android:layout_height="120dp"
-            android:layout_columnWeight="1"
-            android:layout_margin="8dp"
-            android:fontFamily="@font/inter_semibold"
-            android:padding="16dp"
-            android:text="Approved Claims"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:backgroundTint="@color/colorPrimary"
-            app:elevation="10dp"
-            app:strokeColor="@color/colorPrimary" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/deniedClaimsButton"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="4dp"
-            android:layout_height="120dp"
-            android:layout_columnWeight="1"
-            android:layout_margin="8dp"
-            android:fontFamily="@font/inter_semibold"
-            android:padding="16dp"
-            android:text="Denied Claims"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:backgroundTint="@color/red"
-            app:strokeColor="@color/red" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/reviewClaimsButton"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="4dp"
-            android:layout_height="120dp"
-            android:layout_columnWeight="1"
-            android:layout_margin="8dp"
-            android:fontFamily="@font/inter_semibold"
-            android:padding="16dp"
-            android:text="Review Claims"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            app:backgroundTint="@color/colorPrimary"
-            app:elevation="10dp"
-            app:strokeColor="@color/colorPrimary" />
 
     </GridLayout>
 
