--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,23 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/nav_home"
-        android:icon="@drawable/ic_home"
-        android:title=""
-        android:checkable="true"/>
 
     <item
-        android:id="@+id/nav_video"
+        android:id="@+id/nav_settings"
         android:icon="@drawable/ic_settings"
         android:title=""
         android:checkable="true"/>
 
     <item
-        android:id="@+id/nav_books"
+        android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
         android:title="" />
 
     <item
-        android:id="@+id/nav_profile"
+        android:id="@+id/nav_logout"
         android:icon="@drawable/ic_logout"
         android:title="" />
 </menu>
